--- a/_content/pages/concerten.html
+++ b/_content/pages/concerten.html
@@ -1,8 +1,8 @@
 ---
-title: My new blog
+title: Concerten
 layout: blog
 format: none
-blog: post
+blog: concerten
 ---
 
 {% for post in pagination.posts %}
