--- a/_content/pages/concerten/_category.html
+++ b/_content/pages/concerten/_category.html
@@ -2,9 +2,10 @@
 title:
 layout: blog
 format: none
+blog: concerten
 ---
 
-Posts tagged with '{{ tag }}'
+Posts in category '{{ category }}'
 
 {% for post in pagination.posts %}
 {% include 'partial_post.html' %}
