--- a/_content/pages/concerten/_tag.html
+++ b/_content/pages/concerten/_tag.html
@@ -2,9 +2,10 @@
 title:
 layout: blog
 format: none
+blog: concerten
 ---
 
-Posts in category '{{ category }}'
+Posts tagged with '{{ tag }}'
 
 {% for post in pagination.posts %}
 {% include 'partial_post.html' %}
