--- a/_content/pages/about.html
+++ b/_content/pages/about.html
@@ -2,6 +2,8 @@
 title: About this website
 ---
 
+Here's <a href="{{ pcurl('concerts') }}">a list of all the concerts that I've ever been to</a>.
+
 This website is just a bunch of sample stuff to show you what you can do in **PieCrust**. But other than that,
 there's not much to it -- I mean, you can probably see that this content is pretty useless.
 
