--- a/_content/pages/concerts/_tag.html
+++ b/_content/pages/concerts/_tag.html
@@ -7,7 +7,7 @@ blog: concerts
 <article>
   <h1>Concerts by {{ tag }}</h1>
   {% for post in pagination.posts %}
-    {% include "partial_concert.html" %}
+    {% include "partial_list.html" %}
   {% endfor %}
 </article>
 
