--- a/_content/pages/concerts/_tag.html
+++ b/_content/pages/concerts/_tag.html
@@ -4,10 +4,13 @@ layout: blog
 format: none
 blog: concerts
 ---
-<article>
-  <h1>Concerts by {{ tag }}</h1>
-  {% for post in pagination.posts %}
-    {% include "partial_list.html" %}
-  {% endfor %}
+<article role="article">
+  <header>
+    <h1>Concerts by {{ tag }}</h1>
+  </header>
+  <div id="blog-archives">
+    {% for post in pagination.posts %}
+      {% include "partial_list.html" %}
+    {% endfor %}
+  </div>
 </article>
-
