--- a/_content/pages/concerts/_tag.html
+++ b/_content/pages/concerts/_tag.html
@@ -6,7 +6,7 @@ blog: concerts
 ---
 <article role="article">
   <header>
-    <h1>Concerts by {{ tag }}</h1>
+    <h1>Concerts with {{ tag }}</h1>
   </header>
   <div id="blog-archives">
     {% for post in pagination.posts %}
