Limit number of posts on frontpage so it doesn't get too long

--- a/_content/pages/_index.html
+++ b/_content/pages/_index.html
@@ -3,6 +3,7 @@ title: Blog
 layout: blog
 format: none
 blog: post
+posts_per_page: 5
 ---
 {% for post in pagination.posts %}
 {% include 'partial_post.html' %}
