A real about page

--- a/_content/pages/about.html
+++ b/_content/pages/about.html
@@ -1,12 +1,14 @@
 ---
 title: About this website
 ---
+![Me]({{ asset['jan'] }})
 
-Here's <a href="{{ pcurl('concerts') }}">a list of all the concerts that I've ever been to</a>.
+Hi there! I'm Jan Ouwens, a programmer from the Netherlands. You might know me from my [EqualsVerifier](https://code.google.com/p/equalsverifier/) project, which is a Java tool that you can use to test whether you've implemented `equals` correctly.
 
-This website is just a bunch of sample stuff to show you what you can do in **PieCrust**. But other than that,
-there's not much to it -- I mean, you can probably see that this content is pretty useless.
+Currently, I'm using C# to write specialized apps to operate an electrone microscope at [Sioux Electronics](http://www.sioux.eu). Before that, I've done some super-secret stuff at Philips, and I've written web apps in Java vor [TOPdesk](http://www.topdesk.com). In my free time, I like to dabble in Scala and Android, among other things. [Here](https://play.google.com/store/apps/developer?id=Jan+Ouwens)'s my app!
 
-Oh, by the way, don't forget to read the [documentation] so you can replace all those pages with your own.
+When I'm not coding (or doing other things), I like to write, usually in Dutch. See for example my old blog [Brief en leed](http://www.jqno.nl/briefenleed), my [Master's thesis on wireless video streaming](http://www.jqno.nl/assets/thesis.pdf) or my [way too in-depth survey of Asterix jokes](http://www.jqno.nl/assets/paper.pdf). Oh, and this blog, obviously.
 
-[documentation]: http://bolt80.com/piecrust/doc/   "PieCrust documentation"
+You can find me on [LinkedIn](http://www.linkedin.com/in/janouwens), [GitHub](http://github.com/jqno), [Twitter](http://twitter.com/jqno), and [Last.fm](http://www.last.fm/user/jqno).
+
+Speaking of Last.fm: here's [a list of all the concerts that I've been to since 1999]({{ pcurl('concerts') }}).
