--- a/_content/pages/about.html
+++ b/_content/pages/about.html
@@ -5,10 +5,10 @@ title: About this website
 
 Hi there! I'm Jan Ouwens, a programmer from the Netherlands. You might know me from my [EqualsVerifier](https://code.google.com/p/equalsverifier/) project, which is a Java tool that you can use to test whether you've implemented `equals` correctly.
 
-Currently, I'm using C# to write specialized apps to operate an electrone microscope at [Sioux Electronics](http://www.sioux.eu). Before that, I've done some super-secret stuff at Philips, and I've written web apps in Java vor [TOPdesk](http://www.topdesk.com). In my free time, I like to dabble in Scala and Android, among other things. [Here](https://play.google.com/store/apps/developer?id=Jan+Ouwens)'s my app!
+Currently, I'm using C# to write specialized apps to operate an electrone microscope at [Sioux](http://www.sioux.eu). Before that, I've done some super-secret stuff at Philips, and I've written web apps in Java for [TOPdesk](http://www.topdesk.com). In my free time, I like to dabble in Scala and Android, among other things. [Here](https://play.google.com/store/apps/developer?id=Jan+Ouwens)'s my app!
 
 When I'm not coding (or doing other things), I like to write, usually in Dutch. See for example my old blog [Brief en leed](http://www.jqno.nl/briefenleed), my [Master's thesis on wireless video streaming](http://www.jqno.nl/assets/thesis.pdf) or my [way too in-depth survey of Asterix jokes](http://www.jqno.nl/assets/paper.pdf). Oh, and this blog, obviously.
 
-You can find me on [LinkedIn](http://www.linkedin.com/in/janouwens), [GitHub](http://github.com/jqno), [Twitter](http://twitter.com/jqno), and [Last.fm](http://www.last.fm/user/jqno).
+You can find me on [LinkedIn](http://www.linkedin.com/in/janouwens), [GitHub](http://github.com/jqno), [Twitter](http://twitter.com/jqno), [Delicious](https://delicious.com/jqno), and [Last.fm](http://www.last.fm/user/jqno).
 
 Speaking of Last.fm: here's [a list of all the concerts that I've been to since 1999]({{ pcurl('concerts') }}).
