Add StackOverflow profile to about page

--- a/_content/pages/about.html
+++ b/_content/pages/about.html
@@ -9,6 +9,6 @@ Currently, I'm using C# to write specialized apps to operate an electrone micros
 
 When I'm not coding (or doing other things), I like to write, usually in Dutch. See for example my old blog [Brief en leed](http://www.jqno.nl/briefenleed), my [Master's thesis on wireless video streaming](http://www.jqno.nl/assets/thesis.pdf) or my [way too in-depth survey of Asterix jokes](http://www.jqno.nl/assets/paper.pdf). Oh, and this blog, obviously.
 
-You can find me on [LinkedIn](http://www.linkedin.com/in/janouwens), [GitHub](http://github.com/jqno), [Twitter](http://twitter.com/jqno), [Delicious](https://delicious.com/jqno), and [Last.fm](http://www.last.fm/user/jqno).
+You can find me on [LinkedIn](http://www.linkedin.com/in/janouwens), [GitHub](http://github.com/jqno), [StackOverflow](http://stackoverflow.com/users/127863/jqno), [Twitter](http://twitter.com/jqno), [Delicious](https://delicious.com/jqno), and [Last.fm](http://www.last.fm/user/jqno).
 
 Speaking of Last.fm: here's [a list of all the concerts that I've been to since 1999]({{ pcurl('concerts') }}).
