--- a/site/_content/pages/about.html
+++ b/site/_content/pages/about.html
@@ -1,7 +1,7 @@
 ---
 title: About this website
 ---
-![Me]({{ asset['jan'] }})
+![Me]({{ assets['jan'] }})
 
 Hi there! I'm Jan Ouwens, a programmer from the Netherlands. You might know me from my [EqualsVerifier](https://code.google.com/p/equalsverifier/) project, which is a Java tool that you can use to test whether you've implemented `equals` correctly.
 
