--- a/site/_content/pages/concerts/acts.html
+++ b/site/_content/pages/concerts/acts.html
@@ -11,7 +11,7 @@ blog: concerts
   <div id="blog-archives">
     {% for tag in concerts.tags %}
       <h1>{{ tag }}</h1>
-      {% for post in concerts.posts if tag in post.tags %}
+      {% for post in tag.posts %}
         {% include "partial_list.html" %}
       {% endfor %}
     {% endfor %}
