--- a/site/_content/pages/equalsverifier/errormessages.html
+++ b/site/_content/pages/equalsverifier/errormessages.html
@@ -5,13 +5,19 @@ layout: equalsverifier
 datum: 2013-06-05
 ---
 <article role="article">
-<p> Did EqualsVerifier give an error message that you didn't understand? I do what I can, but unfortunately Java stacktraces leave little room for explanation. This page should help make sense of some of EqualsVerifier's error messages.</p>
+<p> Did EqualsVerifier give an error message that you didn't understand? I do what I can, but unfortunately Java stacktraces leave little room for explanation sometimes. This page should help make sense of some of EqualsVerifier's error messages.</p>
 
 <p>This is not a complete list. I'll add to it as needed, so if you need help with an error message, please file an issue in the Issue tracker or let me know on the discussion group, and I'll add an explanation as soon as possible.</p>
 
+<h2>The messages</h2>
 <div id="blog-archives">
-  {% for post in equalsverifier.posts %}
-    {% include 'partial_list_equalsverifier.html' %}
+  {% for cat in equalsverifier.categories %}
+    {% for post in cat.posts %}
+      <div>
+        <span class="bull">&bull;</span>&nbsp;
+        <a href="{{ post.url }}">{{ post.title }}</a>
+      </div>
+    {% endfor %}
   {% endfor %}
 </div>
 </article>
