EqualsVerifier error messages have a post date; pages do not

--- a/site/_content/pages/equalsverifier/errormessages.html
+++ b/site/_content/pages/equalsverifier/errormessages.html
@@ -2,14 +2,13 @@
 title: Error messages
 blog: equalsverifier
 layout: equalsverifier
-datum: 2013-06-05
 ---
-<article role="article">
+<h2>Introduction</h2>
 <p> Did EqualsVerifier give an error message that you didn't understand? I do what I can, but unfortunately Java stacktraces leave little room for explanation sometimes. This page should help make sense of some of EqualsVerifier's error messages.</p>
 
 <p>This is not a complete list. I'll add to it as needed, so if you need help with an error message, please file an issue in the Issue tracker or let me know on the discussion group, and I'll add an explanation as soon as possible.</p>
 
-<h2>The messages</h2>
+<h2>The error messages</h2>
 <div id="blog-archives">
   {% for cat in equalsverifier.categories %}
     {% for post in cat.posts %}
@@ -20,4 +19,3 @@ datum: 2013-06-05
     {% endfor %}
   {% endfor %}
 </div>
-</article>
